--- a/index.html
+++ b/index.html
@@ -30,26 +30,26 @@
     <h2 id="breakfast">Breakfast</h2>
     <div class="menu-section">
   
-        <div class="menu-item"onclick="openItem('puri','40','images/puri.png')"> 
-    <img src="images/puri.png"> 
+        <div class="menu-item"onclick="openItem('puri','40','Images/puri.png')"> 
+    <img src="Images/puri.png"> 
             <p>puri – ₹35</p>
 </div>
 
-        <div class="menu-item"onclick="openItem('masaladosa','40','images/masaladosa.png')"> 
-    <img src="images/masaladosa.png"> 
+        <div class="menu-item"onclick="openItem('masaladosa','40','Images/masaladosa.png')"> 
+    <img src="Images/masaladosa.png"> 
             <p>Masala Dosa – ₹40</p>
 </div>
 
   
         <div class="menu-item"
-     onclick="openItem('bonda2','35','images/bonda2.webp')"> 
-    <img src="images/bonda2.webp"> 
+     onclick="openItem('bonda2','35','Images/bonda2.webp')"> 
+    <img src="Images/bonda2.webp"> 
         <p>Bonda – ₹30</p>
 </div>
 
 
-        <div class="menu-item"onclick="openItem('paper-dosa','35','images/paper-dosa.png')"> 
-    <img src="images/paper-dosa.png"> 
+        <div class="menu-item"onclick="openItem('paper-dosa','35','Images/paper-dosa.png')"> 
+    <img src="Images/paper-dosa.png"> 
             <p>Paper Dosa – ₹35</p>
 </div>
     </div>
@@ -155,3 +155,4 @@
 <script src="./script.js"></script>
 </body>
 </html>
+
